# predict-traffic-volume

./: .gitignore  NEXT_STEPS.md  Next_Steps.md  README.md  pyproject.toml  setup_structure.py  summary.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
contexto_trabalho_AM_USP/: draft_relatorio_final.md  panorama_do_projeto.md
data/: README.md
docs/: draft_relatorio_final.md  modeling_implementation_plan.md  preprocessing_and_feature_engineering_plan.md  references.md  slides_apresentacao.md
notebooks/: 01-exploration.ipynb  01-exploration_insights.md  02-eda_after_preprocess_insights.md  02-eda_after_preprocessing.ipynb  02-preprocessing_and_features.ipynb
reports/figures/: README.md
reports/logs/: catboost_2026-06-30_20-18_log.json  catboost_2026-06-30_20-44_log.json  lightgbm_2026-06-30_20-18_log.json  lightgbm_2026-06-30_20-43_log.json  mlp_2026-06-30_20-28_log.json  random_forest_2026-06-30_20-18_log.json  random_forest_2026-06-30_20-42_log.json  random_forest_2026-06-30_21-07_log.json  ridge_2026-06-30_20-19_log.json  ridge_2026-06-30_20-40_log.json  xgboost_2026-06-30_20-18_log.json  xgboost_2026-06-30_20-42_log.json
src/: README.md  run_pipeline.py
src/features/: build_features.py
src/models/: algorithms.py  data_splitter.py  evaluator.py  features_config.py  plot_metrics.py  train_model.py
tests/: test_preprocessing.py
